--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section div class="resume">
             <p class="texte-tache">
                 Marre des plans foireux ?<br> On te file l’excuse parfaite pour t’en sortir. <br>
-                Trop crédible pour être vraie. Trop drôle pour être refusée. <br> <a href="file:///C:/Users/PC/Desktop/Visual%20Studio%20Code/PROJETS%2012/SITE/LandingPages/moteur.html">J'essaie</a>
+                Trop crédible pour être vraie. Trop drôle pour être refusée. <br> <a href="moteur.html">J'essaie</a>
             </p>
             <img src="3366405-paresseux-prenant-son-cafe-t-shirt-en-coton-bio-desol-2.jpeg" alt="">
         </section>
