--- a/moteur.html
+++ b/moteur.html
@@ -17,7 +17,7 @@
         <h1><a href="file:///C:/Users/PC/Desktop/Visual%20Studio%20Code/PROJETS%2012/SITE/LandingPages/index.html">- Sorry Mom -</a></h1>
         <div class="liens">
             <a href="file:///C:/Users/PC/Desktop/Visual%20Studio%20Code/PROJETS%2012/aPropos.html">- A propos -</a> 
-            <a href="file:///C:/Users/PC/Desktop/Visual%20Studio%20Code/PROJETS%2012/SITE/LandingPages/contact.html">- Contact -</a> 
+            <a href="contact.html">- Contact -</a> 
         </div>
          
     </header>
