--- a/moteur.html
+++ b/moteur.html
@@ -16,7 +16,7 @@
     <header>
         <h1><a href="index.html">- Sorry Mom -</a></h1>
         <div class="liens">
-            <a href="file:///C:/Users/PC/Desktop/Visual%20Studio%20Code/PROJETS%2012/aPropos.html">- A propos -</a> 
+            <a href="file:///C:/Users/PC/Desktop/Visual%20Studio%20Code/PROJETS%2012/aPropos.html">- À propos -</a> 
             <a href="contact.html">- Contact -</a> 
         </div>
          
